--- a/src/app/main-header/main-header.component.html
+++ b/src/app/main-header/main-header.component.html
@@ -1,11 +1,20 @@
-<div class="row-one">
-  <div class="container-padding">
-    Place Logo Here!
-  </div>
-  <div (mouseleave)="resetGreeting()" (mouseenter)="showGreeting()" id="r1c2" class="container-padding">
-    {{greeting}}
-  </div>
-  <div class="container-padding">
-    Search:
-  </div>
-</div>
+<mat-toolbar color="accent" class="toolbar">
+  <mat-toolbar-row class="row-one">
+    <div class="row-one">
+      <div class="container-padding">
+        <span>Place Logo Here!</span>
+      </div>
+      <div id="r1c2" class="container-padding">
+          <button (click)="navigateTo('')" class="nav-buttons" type="button" mat-raised-button color="primary">
+          Home
+          </button>
+          <button (click)="navigateTo('courses')" class="nav-buttons" type="button" mat-raised-button color="warn">
+              Courses
+              </button>
+      </div>
+      <div class="container-padding">
+        <mat-icon class="example-icon" aria-hidden="false" aria-label="Example heart icon">favorite</mat-icon>
+      </div>
+    </div>
+  </mat-toolbar-row>
+</mat-toolbar>
