--- a/src/app/main-content/main-content.component.html
+++ b/src/app/main-content/main-content.component.html
@@ -3,52 +3,7 @@
       Notifications:
     </div>
     <div class="container-padding">
-        <!-- <button type="button" class="btn btn-primary">Primary</button>
-        <button type="button" class="btn btn-secondary">Secondary</button>
-        <button type="button" class="btn btn-success">Success</button>
-        <button type="button" class="btn btn-danger">Danger</button>
-        <button type="button" class="btn btn-warning">Warning</button>
-        <button type="button" class="btn btn-info">Info</button>
-        <button type="button" class="btn btn-light">Light</button>
-        <button type="button" class="btn btn-dark">Dark</button>
-        
-        <button type="button" class="btn btn-link">Link</button> -->
-      <table class="table">
-        <thead class="thead-dark">
-          <tr>
-            <th scope="col">ID</th>
-            <th scope="col">First Name</th>
-            <th scope="col">Last Name</th>
-            <th scope="col">Courses</th>
-            <th><button type="button" class="btn btn-success pull-right"(click)="save()">Save</button>
-              <button type="button" class="btn btn-primary pull-right" [disabled]="disableAddButton" (click)="addStudent()">Add</button>
-            </th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let student of studentArray; let i = index">
-            <th *ngIf="student.editMode === false" scope="row">{{ student.id}}</th>
-            <td *ngIf="student.editMode === false">{{ student.firstName }}</td>
-            <td *ngIf="student.editMode === false">{{ student.lastName }}</td>
-            <td *ngIf="student.editMode === false">{{ student.course }}</td>
-
-            <th *ngIf="student.editMode" scope="row">
-                <input [(ngModel)]="student.id" type="text" class="form-control" placeholder="ID">
-              </th>
-            <td *ngIf="student.editMode">
-                <input [(ngModel)]="student.firstName" type="text" class="form-control" placeholder="firstName">
-              </td>
-            <td *ngIf="student.editMode">
-                <input [(ngModel)]="student.lastName" type="text" class="form-control" placeholder="lastName">
-              </td>
-            <td *ngIf="student.editMode">
-                <input [(ngModel)]="student.course" type="text" class="form-control" placeholder="course">
-              </td>
-
-           <td><button type="button" class="btn btn-danger pull-right" (click)="delete()">X</button></td>
-          </tr>
-        </tbody>
-      </table>
+      <router-outlet class="main-outlet"></router-outlet>
     </div>
     <div class="container-padding">
       Recommendations:
