--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/deeppurple-amber.css";
 * {
     margin: 0px;
     padding: 0px;
@@ -33,6 +34,7 @@ body {
     display: grid;
     grid-template-columns: 1fr 5fr 2fr;
     height: 100%; 
+    width: 100%;
 }
 
 .row-two {
